Added remaining codes. Up to latest

--- a/Approach3_v3.ipynb
+++ b/Approach3_v3.ipynb
@@ -21,9 +21,9 @@
     "import tensorflow as tf\n",
     "from keras import backend as K\n",
     "from keras.models import Model\n",
-    "from keras.layers import Input, Conv3D, MaxPooling3D, UpSampling3D, concatenate, Conv3DTranspose, BatchNormalization, Dropout, Lambda\n",
+    "from keras.layers import Input, Conv3D, MaxPooling3D, UpSampling3D, Conv3DTranspose, BatchNormalization, Dropout, Lambda\n",
     "from tensorflow.keras.callbacks import EarlyStopping, ReduceLROnPlateau, ModelCheckpoint, CSVLogger\n",
-    "from keras.layers import Activation, MaxPool2D, Concatenate"
+    "from keras.layers import Activation, Concatenate"
    ]
   },
   {
@@ -183,41 +183,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def process_all(scan_paths, mask_paths):\n",
-    "    \"\"\"\n",
-    "    Processes all training ct scan cubes ~ 46000 cubes currently\n",
-    "    \"\"\"\n",
-    "    scan_store = np.zeros((1,32,32,32)) # Initialize 1 cube of size (32 x 32 x 32) full of zeroes as np.array cannot concatenate without same dimension\n",
-    "    mask_store = np.zeros((1,32,32,32))\n",
+    "def __init__(self, list_IDs,labels,batch_size = 32, dim = (64,64,32), n_channels = 3, n_classes=1,shuffle=True):\n",
+    "    self.dim = dim\n",
+    "    self.batch = batch_size\n",
+    "    self.labels = labels\n",
+    "    self.list_IDs = list_IDs\n",
+    "    self.n_channels = n_channels\n",
+    "    self.shuffle = shuffle\n",
+    "    self.on_epoch_end() # Triggered at start & end of epoch\n",
     "\n",
-    "    for i in range(len(scan_paths)):\n",
-    "        scan_pixelData = process_scan(scan_paths[i])\n",
-    "        mask_pixelData = read_nrrd_file(mask_paths[i])\n",
-    "\n",
-    "        scan_patch = patchify(scan_pixelData, (32,32,32), step = 32) # Yield 16 x 16 x 3 of size 32 x 32 x 32 cubes\n",
-    "        mask_patch = patchify(mask_pixelData, (32,32,32), step = 32)\n",
-    "\n",
-    "        input_img = np.reshape(scan_patch, (-1, scan_patch.shape[3], scan_patch.shape[4], scan_patch.shape[5])) # Collapse 16 x 16 x 3 into 768 cubes x 32 x 32 x 32\n",
-    "        input_mask = np.reshape(mask_patch, (-1, mask_patch.shape[3], mask_patch.shape[4], mask_patch.shape[5]))\n",
-    "\n",
-    "        scan_store = np.append(scan_store, input_img, axis = 0)\n",
-    "        mask_store = np.append(mask_store, input_mask, axis = 0)\n",
-    "\n",
-    "        print(scan_store.shape)\n",
-    "        print(mask_store.shape)\n",
-    "    return scan_store, mask_store\n",
-    "\n",
-    "\n",
-    "def get_cubes(all_scan_cubes, all_mask_cubes, desired_size = 3000):\n",
-    "    train_storage = list()\n",
-    "    mask_storage = list()\n",
-    "\n",
-    "    while len(train_storage) < desired_size:\n",
-    "        random_idx = random.randint(0, len(all_scan_cubes)-1)\n",
-    "        if np.sum(all_mask_cubes[random_idx]) > 0:\n",
-    "            train_storage.append(all_scan_cubes[random_idx])\n",
-    "            mask_storage.append(all_mask_cubes[random_idx])\n",
-    "            print(f'cube {random_idx} stored', ' : ', f' Current samples: {len(train_storage)}')"
+    "def on_epoch_end(self):\n",
+    "    self.indexes = np.arange(len(self.list_IDs))\n",
+    "    if self.shuffle == True: # Shuffling makes model more robust\n",
+    "        np.random.shuffle(self.indexes)    \n",
+    "        \n",
+    "def __data_generation(self,list_IDs_temp):\n",
+    "    X = np.empty((self.batch_size, *self.dim, self.n_channels))\n",
+    "    y = np.empty((self.batch_size), dtype = int)"
    ]
   },
   {
@@ -242,8 +224,8 @@
     "        scan_pixelData = process_scan(scan_paths[random_idx])\n",
     "        mask_pixelData = read_nrrd_file(mask_paths[random_idx])\n",
     "\n",
-    "        scan_patch = patchify(scan_pixelData, (32,32,32), step = 32) # Yield 16 x 16 x 3 of size 32 x 32 x 32 cubes\n",
-    "        mask_patch = patchify(mask_pixelData, (32,32,32), step = 32)\n",
+    "        scan_patch = patchify(scan_pixelData, (64,64,32), step = 32) # Yield 16 x 16 x 3 of size 32 x 32 x 32 cubes\n",
+    "        mask_patch = patchify(mask_pixelData, (64,64,32), step = 32)\n",
     "\n",
     "        input_img = np.reshape(scan_patch, (-1, scan_patch.shape[3], scan_patch.shape[4], scan_patch.shape[5])) # Collapse 16 x 16 x 3 into 768 cubes x 32 x 32 x 32\n",
     "        input_mask = np.reshape(mask_patch, (-1, mask_patch.shape[3], mask_patch.shape[4], mask_patch.shape[5]))\n",
@@ -282,7 +264,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Counter(train_patients).most_common()[:5][0]"
+    "train_data, train_mask, train_patients = process_one(train_path, train_mask_path, 1000)"
    ]
   },
   {
@@ -291,43 +273,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_patients"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_data, train_mask, train_patients = process_one(train_path, train_mask_path, 2000)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "check_patients_processed(train_patients)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "valid_data, valid_mask, valid_patients = process_one(valid_path, valid_mask_path, 500)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "check_patients_processed(valid_patients)"
+    "valid_data, valid_mask, valid_patients = process_one(valid_path, valid_mask_path, 200)"
    ]
   },
   {
@@ -355,7 +301,7 @@
     "opt = tf.keras.optimizers.Nadam(LR)\n",
     "\n",
     "\n",
-    "model = build_unet((32,32,32,3), n_classes = 1)\n",
+    "model = build_unet((64,64,32,3), n_classes = 1)\n",
     "model.compile(optimizer = opt, loss=dice_coefficient_loss, metrics=dice_coefficient)\n",
     "print(model.summary())"
    ]
@@ -380,8 +326,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "csv_path = '/home/tester/jianhoong/jh_fyp_work/3D_UNet/trials/3DUNet_ModelCSVLogs/UNet_Approach3_v1.csv'\n",
-    "model_checkpoint_path = '/home/tester/jianhoong/jh_fyp_work/3D_UNet/ModelCheckpoints/Approach3_v1.hdf5'\n",
+    "csv_path = '/home/tester/jianhoong/jh_fyp_work/3D_UNet/trials/3DUNet_ModelCSVLogs/UNet_Approach3_v3.csv'\n",
+    "model_checkpoint_path = '/home/tester/jianhoong/jh_fyp_work/3D_UNet/ModelCheckpoints/Approach3_v3.hdf5'\n",
     "\n",
     "my_callbacks = [\n",
     "    ReduceLROnPlateau(monitor='val_loss', factor=0.1, patience=4),\n",
@@ -403,7 +349,7 @@
     "#Fit the model\n",
     "history = model.fit(train_data, \n",
     "        train_mask,\n",
-    "        batch_size=4, \n",
+    "        batch_size=2, \n",
     "        epochs=50,\n",
     "        verbose=1,\n",
     "        validation_data=(valid_data, valid_mask),\n",
@@ -445,56 +391,92 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "test_data, test_mask, test_patients = process_one(test_path, test_mask_path, 100)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import SimpleITK as sitk\n",
+    "from ipywidgets import interact, interactive, IntSlider, ToggleButtons\n",
+    "from tensorflow.keras.models import load_model"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model = tf.keras.models.load_model(model_checkpoint_path, custom_objects = {'dice_coefficient_loss':dice_coefficient_loss,\n",
+    "                                                                                   'dice_coefficient':dice_coefficient})"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "test_img_number = random.randint(0, len(test_data))\n",
+    "\n",
+    "test_img = test_data[test_img_number]\n",
+    "ground_truth = test_mask[test_img_number]\n",
+    "\n",
+    "test_img_input = np.expand_dims(test_img,0)\n",
+    "test_pred = model.predict(test_img_input)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(test_img.shape)\n",
+    "print(ground_truth.shape)\n",
+    "print(test_pred[0].shape)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Reading immediately from .nrrd image instead of np array\n",
+    "@interact\n",
+    "def explore_prediction(layer = (0,31), view = [\"axial\", \"sagittal\",\"coronal\"]):\n",
+    "    if view == 'axial':\n",
+    "        img_array_view = test_img[layer, :, :]\n",
+    "        msk_array_view = ground_truth[layer, :, :]\n",
+    "        pred_array_view = test_pred[0][layer, :, :]\n",
+    "    elif view == 'coronal':\n",
+    "        img_array_view = test_img[:,layer,:]\n",
+    "        msk_array_view = ground_truth[:,layer,:]\n",
+    "        pred_array_view = test_pred[0][:,layer,:]\n",
+    "    else:\n",
+    "        img_array_view = test_img[:,:,layer]\n",
+    "        msk_array_view = ground_truth[:,:,layer]\n",
+    "        pred_array_view = test_pred[0][:,:,layer]\n",
+    "\n",
+    "    plt.figure(figsize=(18, 6))\n",
+    "    plt.subplot(1, 3, 1)\n",
+    "    plt.imshow(img_array_view, cmap='gray', aspect = \"auto\")\n",
+    "    plt.title('Img', fontsize=10)\n",
+    "    plt.subplot(1, 3, 2)\n",
+    "    plt.imshow(msk_array_view, cmap='gray', aspect = \"auto\")\n",
+    "    plt.title('Mask', fontsize=10)\n",
+    "    plt.subplot(1, 3, 3)\n",
+    "    plt.imshow(pred_array_view, cmap='gray', aspect = \"auto\")\n",
+    "    plt.title('Prediction', fontsize=10)\n",
+    "    plt.axis('off')\n",
+    "    plt.show()"
+   ]
   },
   {
    "cell_type": "code",
@@ -505,21 +487,10 @@
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3.10.5 64-bit",
-   "language": "python",
-   "name": "python3"
-  },
   "language_info": {
-   "name": "python",
-   "version": "3.10.5"
+   "name": "python"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "31c0d9e52a0062bfd16013482e06f69feb139e91f5153517cdee37527c70dad2"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
