--- a/Approach2.ipynb
+++ b/Approach2.ipynb
@@ -253,10 +253,21 @@
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3.10.5 64-bit",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "name": "python",
+   "version": "3.10.5"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "31c0d9e52a0062bfd16013482e06f69feb139e91f5153517cdee37527c70dad2"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
