--- a/Approach3_v3.ipynb
+++ b/Approach3_v3.ipynb
@@ -487,10 +487,21 @@
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "name": "python",
+   "version": "3.10.5 (tags/v3.10.5:f377153, Jun  6 2022, 16:14:13) [MSC v.1929 64 bit (AMD64)]"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "31c0d9e52a0062bfd16013482e06f69feb139e91f5153517cdee37527c70dad2"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
